changed nav-bar color back to dark gray

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@ body {
     height: 100px;
     width: 100%;
     color: white;
-    /*background-color: rgb(19, 13, 13, 0.7);*/
-    background-color: brown;
+    background-color: rgb(19, 13, 13, 0.7);
     position: fixed;
     top: 0;
     z-index: 2;
